Fixed the horizontal overflow

--- a/Front-end-pages/css/landing-style.css
+++ b/Front-end-pages/css/landing-style.css
@@ -31,15 +31,16 @@ header{
     transform: scale(0.9);
 }
 
-.main {
+#main {
     position: relative;
     left: 20%;
     bottom: 5rem; 
+    width: 80%;
 }
 
-.main .h1 {
+#main .h1 {
     color: #FFAE7E;
-    font-size: 50px;
+    font-size: 60px;
     font-family: 'Lobster', cursive;
 }
 
@@ -91,7 +92,8 @@ header{
     padding: 7px;
     height: 10px;
     width: 10px;
-    background-color: #FFC37B;
+    background-color: #FFAE7E;
+    border: 1px solid #000;
     border-radius: 50%;
     display: inline-block;
 }
